policies/templates/gcp_gke_enable_stackdriver_logging_v1.yaml
# Copyright 2019 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# Check to see if GKE stackdriver logging is enabled
# https://cloud.google.com/logging/kubernetes-engine/

apiVersion: templates.gatekeeper.sh/v1alpha1
kind: ConstraintTemplate
metadata:
  name: gcp-gke-enable-stackdriver-logging-v1
spec:
  crd:
    spec:
      names:
        kind: GCPGKEEnableStackdriverLoggingConstraintV1
      validation:
        openAPIV3Schema:
          properties: {}
  targets:
    validation.gcp.forsetisecurity.org:
      rego: | #INLINE("validator/gke_enable_stackdriver_logging.rego")
            #
            # Copyright 2019 Google LLC
            #
            # Licensed under the Apache License, Version 2.0 (the "License");
            # you may not use this file except in compliance with the License.
            # You may obtain a copy of the License at
            #
            #      http://www.apache.org/licenses/LICENSE-2.0
            #
            # Unless required by applicable law or agreed to in writing, software
            # distributed under the License is distributed on an "AS IS" BASIS,
            # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
            # See the License for the specific language governing permissions and
            # limitations under the License.
            #
            
            package templates.gcp.GCPGKEEnableStackdriverLoggingConstraintV1
            
            import data.validator.gcp.lib as lib
            
            deny[{
            	"msg": message,
            	"details": metadata,
            }] {
            	constraint := input.constraint
            	asset := input.asset
            	asset.asset_type == "container.googleapis.com/Cluster"
            
            	cluster := asset.resource.data
            	stackdriver_logging_disabled(cluster)
            
            	message := sprintf("Stackdriver logging is disabled in cluster %v.", [asset.name])
            	ancestry_path = lib.get_default(asset, "ancestry_path", "")
            	metadata := {"resource": asset.name, "ancestry_path": ancestry_path}
            }
            
            ###########################
            # Rule Utilities
            ###########################
            stackdriver_logging_disabled(cluster) {
            	loggingService := lib.get_default(cluster, "loggingService", "none")
            	loggingService != ""
            	loggingService != "logging.googleapis.com"
            	loggingService != "logging.googleapis.com/kubernetes"
            }
            #ENDINLINE
